about me section fixed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Lenson's resume</title>
     <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<title>Lenson's resume</title>
+
 <body>
     <header>
         <h1>Hey there💛 I'm Lenson</h1>
@@ -40,9 +41,10 @@
                     <span class="button_text">contacts</span>
                 </span>
         </div>
-<imgclass="navigationimage" src="./images/navigationimage.jpg" alt="">
+<img class="navigationimage" src="./images/navigationimage.jpg" alt="">
    </div>
-   <div class="aboutmesection">
+   
+   <div class="aboutmetitle">
     <h1>About me</h1>
        <p>Hello and welcome to my portfolio website!
          <br>My name is Lenson Mutugi and I am a passionate self-taught coder
@@ -52,6 +54,6 @@
          <br>I am excited to take on new challenges and create innovative solutions. 
          <br>Thank you for taking the time to explore my portfolio and I look forward to hearing from you.
      </p>
-   </div>
+    </div>
 </body>
 </html>
