--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="button">
             <span class="button_lg">
                 <span class="button_sl"></span>
-                <span class="button_text">Education</span>
+                <span class="button_text"><a href="#aboutme">About me</a></span>
             </span>
         </button>
             <button class="button">
@@ -44,16 +44,25 @@
 <img class="navigationimage" src="./images/navigationimage.jpg" alt="">
    </div>
    
-   <div class="aboutmetitle">
+   <div id="aboutme" class="aboutmetitle">
     <h1>About me</h1>
        <p>Hello and welcome to my portfolio website!
-         <br>My name is Lenson Mutugi and I am a passionate self-taught coder
+         <br>My name is Lenson Mutugi and I am a passionate self-taught coder.
          <br> I love creating beautiful, functional websites and applications. 
-         <br>As a beginner, I am constantly learning and expanding my skillset in order to bring my clients the best possible results.
-         <br> With a focus on attention to detail and a commitment to creating user-friendly experiences,
-         <br>I am excited to take on new challenges and create innovative solutions. 
-         <br>Thank you for taking the time to explore my portfolio and I look forward to hearing from you.
+         <br>As a beginner, I am constantly learning and expanding my skillset
+         <br> in order to bring my clients the best possible results.
+         <br> With a focus on attention to detail and a commitment to creating 
+         <br>user-friendly experiences I am excited to take on new challenges and
+         <br> create innovative solutions.Thank you for taking the time to explore
+         <br> my portfolio and I look forward to hearing from you.
+         <p>Your time is limited, so don't waste it living someone else's life.
+        <br> Don't be trapped by dogma – which is living with the results of other people's thinking.
+        <br> -Steve Jobs
+        </p>
      </p>
+    </div>
+    <div class="aboutmetitle">
+
     </div>
 </body>
 </html>
