education section added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="button">
                 <span class="button_lg">
                     <span class="button_sl"></span>
-                    <span class="button_text">Hobbies</span>
+                    <span class="button_text"><a href="#education">Education</a></span>
                 </span>
             </button>
             <button class="button">
@@ -55,14 +55,37 @@
          <br>user-friendly experiences I am excited to take on new challenges and
          <br> create innovative solutions.Thank you for taking the time to explore
          <br> my portfolio and I look forward to hearing from you.
-         <p>Your time is limited, so don't waste it living someone else's life.
-        <br> Don't be trapped by dogma – which is living with the results of other people's thinking.
-        <br> -Steve Jobs
         </p>
      </p>
     </div>
-    <div class="aboutmetitle">
+    <div id="education" class="educationsection">
+        <img class="educationimage" src="./images/Drawing Cartoon World Book Day Abstract Campus Education Background Backgrounds _ PSD Free Download - Pikbest.jpg" alt="there was supposed to be an image here">
 
+        <p><strong>My education</strong>
+            <br>Hi there! I'm a Kenyan student who's had the privilege of attending several
+            <br> fantastic schools in different parts of the country.
+            <br> I began my academic journey at State House Primary in Nairobi,
+            <br> where I gained a strong foundation in education. From there,
+            <br> I moved on to Winners Academy in Garrissa, where I learned more about
+            <br> the unique cultures and traditions of different communities in Kenya.
+            <br> After that, I attended Plainsville Academy in Meru, where I had the
+            <br> opportunity to meet new people and experience life in a way.
+            <br> Finally, I ended up at Mang'u High School in Kiambu, where I continued
+            <br> to expand my knowledge and skills and prepare for the next chapter of my life.
+            <br>Throughout my school years, I've also been involved in a variety of 
+            <br>co-curricular activities, including drama and rugby.
+            <br> Rugby has taught me the importance of teamwork, leadership, and perseverance,
+            <br> and I'm proud to have received recognition for my performance on the field.
+            <br> Meanwhile, drama has given me the opportunity to explore my creative side
+            <br> and improve my public speaking and communication skills.
+            <br> I've won numerous awards for my achievements in these activities,
+            <br> which is a testament to the hard work and dedication I've put into them.
+            <br>Looking back on my journey so far, I'm grateful for the opportunities,
+            <br> I've had and the experiences I've gained. I believe that my diverse
+            <br> background and experiences have prepared me well for
+            <br> the future, whatever it may hold.I'm excited to continue exploring my
+            <br> passions and interests and making a positive impact in the world around me
+        </p>
     </div>
 </body>
 </html>
