--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
             <br> fantastic schools in different parts of the country.
             <br> I began my academic journey at State House Primary in Nairobi,
             <br> where I gained a strong foundation in education. From there,
-            <br> I moved on to Winners Academy in Garrissa, where I learned more about
+            <br> I moved on to <b>Winners Academy </b> in Garrissa, where I learned more about
             <br> the unique cultures and traditions of different communities in Kenya.
-            <br> After that, I attended Plainsville Academy in Meru, where I had the
+            <br> After that, I attended <b>Plainsville Academy</b>  in Meru, where I had the
             <br> opportunity to meet new people and experience life in a way.
-            <br> Finally, I ended up at Mang'u High School in Kiambu, where I continued
+            <br> Finally, I ended up at <b>Mang'u High School </b>in Kiambu, where I continued
             <br> to expand my knowledge and skills and prepare for the next chapter of my life.
             <br>Throughout my school years, I've also been involved in a variety of 
-            <br>co-curricular activities, including drama and rugby.
+            <br>co-curricular activities, including <b>drama</b> and <b>rugby</b>.
             <br> Rugby has taught me the importance of teamwork, leadership, and perseverance,
             <br> and I'm proud to have received recognition for my performance on the field.
             <br> Meanwhile, drama has given me the opportunity to explore my creative side
