contact section done

--- a/index.html
+++ b/index.html
@@ -87,5 +87,47 @@
             <br> passions and interests and making a positive impact in the world around me
         </p>
     </div>
+    <footer>
+    <div class="firstrowlogos">
+        <div class="contactlogo1">
+                <img class="discordlogo" src="./images/githublogo.jpg" alt="">
+                <button id="socialbutton">
+                    <a href="https://github.com/lensonlovescode" target="_blank">GitHub</a>
+                </button>
+        </div>
+        <div class="contactlogo2">
+            <img class="discordlogo" src="./images/instagramlogo.png" alt="">
+            <button id="socialbutton">
+                <a href="https://www.instagram.com/papara_z_ii/"target="_blank">Instagram</a>
+            </button>
+        </div>
+        <div class="contactlogo3">
+            <img class="discordlogo" src="./images/twitterlogo.png" alt="">
+            <button id="socialbutton">
+                <a href="https://twitter.com/papara_z_ii"target="_blank">Twitter</a>
+            </button>
+        </div>         
+    </div>
+    <div class="secondrowlogos"> 
+        <div class="contactlogo4">
+            <img class="discordlogo" src="./images/numberlogo.png" alt="">
+            <button id="socialbutton">
+                Phone
+            </button>
+        </div>
+        <div class="contactlogo5">
+            <img class="discordlogo" src="./images/spotifylogo.png" alt="">
+            <button id="socialbutton">
+                Spotify
+            </button>
+        </div>
+        <div class="contactlogo6">
+            <img class="discordlogo" src="./images/snapchatlogo.png" alt="">
+            <button id="socialbutton">
+                Snapchat
+            </button>
+        </div>        
+    </div>
+    </footer>
 </body>
 </html>
