--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     </header>
     <!-- navigation division for the buttons -->
     <div class="navigationdiv">
-        <img class="navigationimage1" src="./images/navigationimage1.jpg" alt="">
     <div class="lensonbutton">
     <button class="button">
         <span class="button_lg">
             <span class="button_sl"></span>
-            <span class="button_text"><a href="https://www.instagram.com/" target="_blank">lenson</a></span>
+            <span class="button_text">lenson</span>
         </span>
     </button>
         <button class="button">
@@ -38,10 +37,9 @@
             <button class="button">
                 <span class="button_lg">
                     <span class="button_sl"></span>
-                    <span class="button_text">contacts</span>
+                    <span class="button_text"><a href="#contacts">contacts</a></span>
                 </span>
         </div>
-<img class="navigationimage" src="./images/navigationimage.jpg" alt="">
    </div>
    
    <div id="aboutme" class="aboutmetitle">
@@ -87,7 +85,7 @@
             <br> passions and interests and making a positive impact in the world around me
         </p>
     </div>
-    <footer>
+    <footer id="contacts">
     <div class="firstrowlogos">
         <div class="contactlogo1">
                 <img class="discordlogo" src="./images/githublogo.jpg" alt="">
@@ -118,7 +116,7 @@
         <div class="contactlogo5">
             <img class="discordlogo" src="./images/spotifylogo.png" alt="">
             <button id="socialbutton">
-                Spotify
+                <a href="https://open.spotify.com/user/31jsk7mgncr7nrppsu44ccz24ki4" target="_blank">Spotify</a>
             </button>
         </div>
         <div class="contactlogo6">
