phone number page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    </div>
    
    <div id="aboutme" class="aboutmetitle">
-    <h1>About me</h1>
+    <h1 class="aboutmeheading">About me</h1>
        <p>Hello and welcome to my portfolio website!
          <br>My name is Lenson Mutugi and I am a passionate self-taught coder.
          <br> I love creating beautiful, functional websites and applications. 
@@ -110,7 +110,7 @@
         <div class="contactlogo4">
             <img class="discordlogo" src="./images/numberlogo.png" alt="">
             <button id="socialbutton">
-                Phone
+                <a href="phonenumber.html">Phone</a>
             </button>
         </div>
         <div class="contactlogo5">
