--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="contactlogo6">
             <img class="discordlogo" src="./images/snapchatlogo.png" alt="">
             <button id="socialbutton">
-                Snapchat
+                <a href="phonenumber.html">Snapchat</a>
             </button>
         </div>        
     </div>
