--- a/phonenumber.html
+++ b/phonenumber.html
@@ -8,9 +8,23 @@
     <title>call me</title>
 </head>
 <body>
-    <div>
+    <nav>
+        <div class="logo">
+          <a href="#">Logo</a>
+        </div>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      
+    <div class="backhomebutton">
         <button id="socialbutton">
-            <a href="./index.html">Back Home</a>
+            <a href="./index.html">Home</a>
         </button>
     </div>
     <div class="phonenumber">
